--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <div class="logo">
-            <img src="logo.png" alt="Company Logo">
+            <img src="img/logo.png" alt="Company Logo" class="logo">
         </div>
         <nav>
             <ul>
