--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <div class="logo">
             <img src="img/logo.png" alt="Company Logo" class="logo">
         </div>
+        <button class="menu-toggle">☰</button>
         <nav>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#projects">PROJECTS</a></li>
                 <li><a href="#about">ABOUT US</a></li>
@@ -25,9 +26,9 @@
 <main>
     <section id="home" class="hero">
         <h1>Your idea turned into reality</h1>
-        <div class="container_btn">
-            <button class="btn1">ABOUT US</button>
-        <button class="btn2">PROJECTS</button>
+        <div class="hero-buttons">
+            <button class="btn-about">ABOUT US</button>
+            <button class="btn-projects">PROJECTS</button>
         </div>
     </section>
     <section id="about">
@@ -69,9 +70,7 @@
         </div>
     </section>
     <section id="projects" class="container-projects">
-        <h2 class="container-h2-projects">
-            OUR PROJECTS
-        </h2>
+        <h2>OUR PROJECTS</h2>
         <div class="container-card-projects">
             <div class="card-projects">
                 <img src="img/img-card-1projects.jpg" alt="">
@@ -109,19 +108,19 @@
         <h2 class="services_h2">SERVICES</h2>
         <div class="service-categories">
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="img/img-framing.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">FRAMING</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="img/img-fences.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">FENCES</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="/img/img_decks.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">DECKS</div>
                 </div>
@@ -133,19 +132,19 @@
                 </div>
             </div>
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="/img/const3.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">SIDING</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="/img/img-flooring.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">CONCRETE</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="/img/img-flooring.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">FLOORING</div>
                 </div>
