--- a/index.html
+++ b/index.html
@@ -126,25 +126,25 @@
                 </div>
             </div>
             <div class="container">
-                <img src="/img/11111.png" alt="Planta" class="image">
+                <img src="img/11111.png" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">DRYWALL</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/const3.jpeg" alt="Planta" class="image">
+                <img src="img/const3.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">SIDING</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/img-flooring.jpeg" alt="Planta" class="image">
+                <img src="img/img-flooring.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">CONCRETE</div>
                 </div>
             </div>
             <div class="container">
-                <img src="/img/img-flooring.jpeg" alt="Planta" class="image">
+                <img src="img/img-flooring.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">FLOORING</div>
                 </div>
