--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="container">
-                <img src="/img/img_decks.jpeg" alt="Planta" class="image">
+                <img src="img/img_decks.jpeg" alt="Planta" class="image">
                 <div class="card-sec">
                     <div class="name">DECKS</div>
                 </div>
