--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </p>
             </div>
             <div class="card">
-                <img src="img/icons/responsability2.png" alt="responsability2">
+                <img src="img/icons/responsability2.png" alt="responsability">
                 <h3 class="cards-h3">RESPONSABILITY</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto praesentium quasi,
