--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="#home">HOME</a></li>
-                <li><a href="#projects">PROJECTS</a></li>
                 <li><a href="#about">ABOUT US</a></li>
+                <li><a href="#projects">PROJECTS</a></li>
                 <li><a href="#services">SERVICES</a></li>
                 <li><a href="#contact">CONTACT US</a></li>
             </ul>
@@ -27,8 +27,8 @@
     <section id="home" class="hero">
         <h1>Your idea turned into reality</h1>
         <div class="hero-buttons">
-            <button class="btn-about">ABOUT US</button>
-            <button class="btn-projects">PROJECTS</button>
+            <a href="#about"><button class="btn-about">ABOUT US</button></a>
+            <a href="#projects"><button class="btn-projects">PROJECTS</button></a>
         </div>
     </section>
     <section id="about">
