--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <section id="home" class="hero">
         <h1>Your idea turned into reality</h1>
         <div class="hero-buttons">
-            <a href="#about"><button class="btn-about">ABOUT US</button></a>
-            <a href="#projects"><button class="btn-projects">PROJECTS</button></a>
+            <button class="btn-about">ABOUT US</button>
+            <button class="btn-projects">PROJECTS</button>
         </div>
     </section>
     <section id="about">
