--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <div class="logo">
             <img src="img/logo.png" alt="Company Logo" class="logo">
         </div>
-        <button class="menu-toggle">☰</button>
         <nav>
             <ul class="nav-links">
                 <li><a href="#home">HOME</a></li>
@@ -160,7 +159,7 @@
         <p>Hours: Mon-Fri 8:00 AM - 5:00 PM, Sat 8:00 AM - 12:00 PM</p>
     </section>
     <footer>
-        <p>&copy; 2025 Construction Company. All Rights Reserved.</p>
+        <p>&copy; 2025 ZAVALETA Construction. All Rights Reserved.</p>
     </footer>
 </main>   
 </body>
