--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="img/logo.png" alt="Company Logo" class="logo">
         </div>
         <nav>
-            <ul class="nav-links" onclick="toggleMenu()">
+            <ul class="navlinks" onclick="toggleMenu()">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT US</a></li>
                 <li><a href="#projects">PROJECTS</a></li>
@@ -26,10 +26,11 @@
         </nav>
         <script>
             function toggleNavbar() {
-              const navbar = document.getElementById('navbarList');
-              navbar.style.display = navbar.style.display === 'none' ? 'block' : 'none';
+              const navlist = document.getElementById('navbarList');
+              navlist.style.display = navlist.style.display === 'none' ? 'block' : 'none';
             }
             </script>
+        </script>
         <script src="https://kit.fontawesome.com/1c17fcae1a.js" crossorigin="anonymous"></script>
     </header>
 <main>
